<resources>
    <string name="app_name">Taller3_NicolasVargas</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="cancelar">Cancelar</string>
    <string name="ingrese_la_contrase_a">Ingrese la contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="ingrese_su_email">Ingrese su email</string>
</resources>