<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LogActivity"
    android:layout_marginHorizontal="5dp">

    <TextView
        android:id="@+id/marca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/laCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textColor="@color/black"
        android:layout_marginTop="80dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/ingrese_su_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="15dp" />

    <TextView
        android:id="@+id/laContra"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contrase_a"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/contra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/ingrese_la_contrase_a"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp" />

    <Button
        android:id="@+id/iniciar"
        android:layout_marginTop="150dp"

        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingHorizontal="15dp"
        android:layout_gravity="center"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/retroceder"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:paddingHorizontal="15dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/cancelar"/>

</LinearLayout>