<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrarActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/marca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/marca"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="166dp"
                android:text="Registro"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/laNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/registro"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="Nombre"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/laNickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/laNombre"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="Apellido"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/laEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/laNickname"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="Edad"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/laCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/laEdad"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="Correo"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/laContra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/contrase_a"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/laNumero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/laContra"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="Numero"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/registro"
                android:layout_marginStart="53dp"
                android:layout_marginTop="25dp"
                android:layout_toEndOf="@id/laNombre"
                android:ems="10"
                android:hint="Ingrese su nombre"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_marginStart="19dp"
                android:layout_marginTop="25dp"
                android:layout_toEndOf="@id/laContra"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="Ingrese una contraseña"/>

            <EditText
                android:id="@+id/editEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editApellido"
                android:layout_marginStart="80dp"
                android:layout_marginTop="11dp"
                android:layout_toEndOf="@id/laEdad"
                android:ems="10"
                android:hint="Ingrese su edad"
                android:inputType="number" />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editEdad"
                android:layout_marginStart="62dp"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@id/laCorreo"
                android:ems="10"
                android:hint="Ingrese su email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editNombre"
                android:layout_marginStart="50dp"
                android:layout_marginTop="11dp"
                android:layout_toEndOf="@id/laNickname"
                android:ems="10"
                android:hint="Ingrese su apellido"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editNumero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editPassword"
                android:layout_marginStart="50dp"
                android:layout_marginTop="11dp"
                android:layout_toEndOf="@id/laNumero"
                android:ems="10"
                android:inputType="number"
                android:hint="Ingrese su numero"/>


            <Button
                android:id="@+id/next"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/buscarIma"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="43dp"
                android:text="Siguiente"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/next"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="26dp"
                android:text="@string/cancelar"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/FotoP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editNumero"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="Foto de perfil"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/imageP"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_below="@id/FotoP"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="150dp"
                android:layout_marginTop="30dp"
                android:scaleType="fitCenter"
                />

            <Button
                android:id="@+id/buscarIma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageP"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:text="Seleccionar imagen"
                android:textColor="@color/white" />

        </RelativeLayout>
    </ScrollView>

</LinearLayout>